Testing pipeline changes to mongo properties